<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/input_expense_date"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="false"
            android:gravity="center_horizontal"
            android:hint="@string/input_expense_date_hint"
            android:longClickable="false" />

        <Spinner
            android:id="@+id/input_expense_category"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:dropDownWidth="@dimen/add_expense_textbox_size"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:prompt="@string/input_expense_category_hint"
            />

        <EditText
            android:id="@+id/input_expense_description"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/input_expense_description_hint"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/input_expense_cost"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/input_expense_cost_hint"
            android:inputType="numberDecimal"
            android:longClickable="false"
            android:imeOptions="actionDone"
            />

    </LinearLayout>

    <Button
        android:id="@+id/button_add_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/button_save_text" />


</RelativeLayout>