<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_budget_category"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/input_budget_category_hint"
            android:layout_marginBottom="20dp"
            android:inputType="textCapSentences"/>

        <EditText
            android:id="@+id/input_budget_amount"
            android:layout_width="@dimen/add_expense_textbox_size"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="@string/input_budget_amount_hint"
            android:inputType="numberDecimal"
            android:layout_marginBottom="20dp"
            android:longClickable="false"
            android:imeOptions="actionDone"
            />

        <CheckBox
            android:id="@+id/checkbox_one_time_payment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkbox_budget_one_time_text"
            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>
    <Button
        android:id="@+id/button_save_budget_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:text="@string/button_save_text" />

</RelativeLayout>